...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <TextView
        android:id="@+id/animal_item_text"
        android:layout_width="259dp"
        android:layout_height="58dp"
        android:hint="The Animal"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20dp"
...
